# robi

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: evaluate_on_synthetic.ipynb  test_on_DLBCL.ipynb  test_on_synthetic.ipynb
robi/: __init__.py  evaluation.py  evaluation_npy.py  evaluation_torch.py  preselection.py  selection.py  utils.py  utils_preselection.py  utils_selection.py
test/: test_evaluation.py  test_robi.py
